# Jify

./: .gitignore  README.md  agent_loop.py  agent_p2p.py  context_manager.py  event_bus.py  experience_extractor.py  gateway.py  jify_tool.py  long_term_memory.py  model_client.py  output_engine.py  pyproject.toml  self_evolution.py  skill_detector.py  subagent.py  team.py  user_profile.py
cli/: __init__.py  __main__.py  app.py  bootstrap.py  console.py
config/: system_prompt.py
gateway/: auth.py  routes.py  ws_console.py
gateway_web/: index.html  login.html
plugins/: __init__.py  hook_manager.py  loader.py
skills/frontend-design/: skill.json
skills/karpathy-guidelines/: skill.json
skills/security-audit/: SKILL.md  skill.json
skills/wiki_search/: SKILL.md  __init__.py  handler.py  skill.json
storage/: __init__.py  db.py
tools/: __init__.py  approval.py  file_ops.py  fuzz_match.py  models.py  parallel.py  registry.py  symbol_index.py  workflow_engine.py
tools/batch_patch/: __init__.py  applier.py
tools/builtin/: __init__.py  allowlist.py  exec_blacklist.py  exec_tool.py  file_tools.py  load_skill.py  mcp_tools.py  memory_tool.py  p2p_tools.py  patch_file.py  skill_create.py  static_analysis.py  subagent.py  team_tools.py  todo_tool.py  workflow_tool.py
tools/mcp/: __init__.py  config.py  manager.py
workflows/: code_audit.yaml
