[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "jify"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.109.1",
    "arc>=1.0",
    "asyncio>=4.0.0",
    "diffstrings>=0.1.3",
    "fastapi>=0.136.3",
    "itsdangerous>=2.2.0",
    "mcp>=1.27.1",
    "md2term>=1.0.2",
    "openai>=2.33.0",
    "prompt-toolkit>=3.0.52",
    "pytermgui>=7.7.4",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "requests>=2.33.1",
    "rosy>=0.8.3",
    "textual>=8.2.4",
    "websockets>=16.0",
]

[project.scripts]
jify = "cli.app:main"

[tool.setuptools]
py-modules = [
    "agent_loop", "agent_p2p", "context_manager",
    "event_bus", "experience_extractor",
    "jify_tool", "long_term_memory", "model_client",
    "output_engine", "self_evolution", "skill_detector",
    "subagent", "team", "user_profile"
]

[tool.setuptools.packages.find]
include = ["cli", "config", "gateway", "tools", "tools.*", "plugins", "plugins.*", "storage", "storage.*"]
